# testAIDEN001

./: .env.example  .gitignore  docker-compose.yml
.claude/: settings.local.json
backend/: alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 817e4c6c0bc2_initial_schema.py
backend/app/: config.py  dependencies.py  main.py
backend/app/agents/: __init__.py
backend/app/agents/base/: agent.py  callbacks.py  nodes.py  state.py
backend/app/agents/ryan/: agent.py  nodes.py  prompts.py  schemas.py  state.py
backend/app/api/v1/: agents.py  deliverables.py  documents.py  hitl.py  phases.py  projects.py  router.py  websocket.py
backend/app/core/: exceptions.py  logging.py  middleware.py  security.py
backend/app/db/: redis.py  session.py
backend/app/llm/: callbacks.py  models.py  provider.py
backend/app/models/: __init__.py  agent.py  base.py  deliverable.py  document.py  hitl.py  project.py  task.py  user.py
backend/app/orchestration/: engine.py  event_bus.py  events.py  hitl_controller.py  phase_controller.py
backend/app/rag/: chunker.py  embedder.py  pipeline.py  retriever.py  vectorstore.py
backend/app/rag/loaders/: base.py  docx_loader.py  pdf_loader.py
backend/app/schemas/: agent.py  common.py  deliverable.py  document.py  hitl.py  project.py  websocket.py
backend/app/services/: deliverable_service.py  document_service.py  hitl_service.py  phase_service.py  project_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_api_projects.py
backend/tests/unit/: test_project_service.py
frontend/: .env.local.example  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: globals.css  layout.tsx
(+42 files in other folders)
