[project]
name = "aiden-backend"
version = "0.1.0"
description = "AIDEN - Agentic AI-native Development & Engineering Platform"
requires-python = ">=3.10"
dependencies = [
    # Web Framework
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "greenlet>=3.1.0",

    # Redis
    "redis[hiredis]>=5.2.0",

    # LangChain & LangGraph
    "langchain>=0.3.14",
    "langchain-core>=0.3.29",
    "langchain-openai>=0.3.0",
    "langchain-anthropic>=0.3.1",
    "langchain-community>=0.3.14",
    "langchain-chroma>=0.2.2",
    "langgraph>=0.2.61",
    "langgraph-checkpoint-postgres>=2.0.12",

    # RAG & Embeddings
    "chromadb>=0.6.3",

    # Document Loaders
    "pypdf>=5.1.0",
    "python-docx>=1.1.2",
    "openpyxl>=3.1.5",
    "unstructured>=0.16.12",

    # Auth & Security
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # Configuration
    "pydantic-settings>=2.7.0",

    # Utilities
    "httpx>=0.28.0",
    "python-dateutil>=2.9.0",
    "tiktoken>=0.8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.28.0",
    "ruff>=0.8.0",
    "mypy>=1.14.0",
]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.backends._legacy:_Backend"
